--- a/index.html
+++ b/index.html
@@ -67,10 +67,9 @@
     <!-- d3 -->
     <script src="https://d3js.org/d3.v5.min.js"></script>
 
-    <!-- fullpage -->
-    <script src="js/libs/jquery.pagepiling.js"></script>
 
     <!-- own scripts -->
+    <script src="js/colormanager.js"></script>
     <script src="js/bars.js"></script>
     <script src="js/lines.js"></script>
     <script src="js/bubble.js"></script>
