main circular vis implemented

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="css/fontstyles.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/jquery.pagepiling.css">
+
+    <link rel="icon" href="img/favicon.jpg">
 </head>
 
 
@@ -43,10 +45,35 @@
         <div class="col-2">
             <div class="row" id="lineChartDiv" style="height: 100%"></div>
         </div>
-        <div class="col-8"><div class="row" id="bubbleChartDiv" style="height: 100%"></div></div>
+
+        <!-- CAROUSEL COL -->
+        <div class="col-8">
+            <div class="bd-example" style="height: 100%">
+                <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" style="height: 100%">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                    </ol>
+                    <div class="carousel-inner" style="height: 100%">
+                        <div class="carousel-item active" style="height: 100%">
+                            <div class="row" id="bubbleChartDiv" style="height: 100%"></div>
+                        </div>
+                        <div class="carousel-item" style="height: 100%">
+                            <div class="row" id="fancy" style="height: 100%"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+        <!---->
         <div class="col-2" style="border: 1px; border-style: dotted">
             <div class="row" style="height: 20%"><h3>Accessible Information</h3></div>
-            <div class="row" style="height: 20%"><span style="text-align: center; width: 100%" id="infoField"></span></div>
+            <div class="row" style="height: 20%"><span style="text-align: center; font-size: 1.5vh; width: 100%" id="infoField"></span></div>
         </div>
     </div>
 
@@ -62,11 +89,17 @@
     <!-- SCRIPTS -->
 
     <!-- jquery -->
-    <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 
     <!-- d3 -->
     <script src="https://d3js.org/d3.v5.min.js"></script>
 
+
+    <!-- data -->
+    <script src="js/data.js"></script>
 
     <!-- own scripts -->
     <script src="js/colormanager.js"></script>
@@ -74,6 +107,12 @@
     <script src="js/lines.js"></script>
     <script src="js/bubble.js"></script>
 
+
+
     <script src="js/main.js"></script>
+    <script src="js/fancyLinesNew.js"></script>
+    <script src="js/fancy.js"></script>
+
+
 </body>
 </html>
